@@ -27,6 +27,9 @@ Core and Builtins
 Library
 -------
 
+- The webbrowser module now uses subprocess's start_new_session=True rather
+  than a potentially risky preexec_fn=os.setsid call.
+
 - Issue #22236: Fixed Tkinter images copying operations in NoDefaultRoot mode.
 
 - Issue #22191: Fix warnings.__all__.
